crates/uitest/fixtures/name_resolution/conflict_generics.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/conflict_generics.fe
---
error[2-0004]: `T` is ambiguous
  ┌─ conflict_generics.fe:2:8
  │
1 │ pub struct MyS<T, U, T> {
  │                -     - candidate 2
  │                │      
  │                candidate 1
2 │     x: T,
  │        ^ `T` is ambiguous

error[3-0019]: duplicate generic parameter name in struct `MyS`
  ┌─ conflict_generics.fe:1:16
  │
1 │ pub struct MyS<T, U, T> {
  │                ^     - `T` is redefined here
  │                │      
  │                `T` is defined here
